--- a/.github/workflows/arm_compilation.yml
+++ b/.github/workflows/arm_compilation.yml
@@ -83,7 +83,7 @@ jobs:
           make clean
           make -j4 profile-build ARCH=$BINARY COMP=$COMP RUN_PREFIX=$EMU
           make strip ARCH=$BINARY COMP=$COMP
-          #RUN_PREFIX=$EMU ../tests/signature.sh "$benchref"
+          RUN_PREFIX=$EMU ../tests/signature.sh "$benchref"
 
           # Ensure artifact folder exists
           mkdir -p artifact
