--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -85,7 +85,7 @@ jobs:
           make clean
           make -j4 profile-build ARCH=$BINARY COMP=$COMP RUN_PREFIX="$SDE"
           make strip ARCH=$BINARY COMP=$COMP
-          #RUN_PREFIX="$SDE" ../tests/signature.sh "$benchref"
+          RUN_PREFIX="$SDE" ../tests/signature.sh "$benchref"
 
           # Ensure artifact folder exists
           mkdir -p artifact
