--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,124 +69,124 @@ jobs:
             comp: gcc
             run_64bit_tests: true
             shell: bash
-    #       - name: macOS 15 Apple Clang
-    #         os: macos-15-intel
-    #         compiler: clang++
-    #         comp: clang
-    #         run_64bit_tests: true
-    #         shell: bash
-    #       - name: Windows 2022 Mingw-w64 GCC x86_64
-    #         os: windows-2022
-    #         compiler: g++
-    #         comp: mingw
-    #         run_64bit_tests: true
-    #         msys_sys: mingw64
-    #         msys_env: x86_64-gcc
-    #         shell: msys2 {0}
-    #       - name: Windows 2022 Mingw-w64 GCC i686
-    #         os: windows-2022
-    #         compiler: g++
-    #         comp: mingw
-    #         run_32bit_tests: true
-    #         msys_sys: mingw32
-    #         msys_env: i686-gcc
-    #         shell: msys2 {0}
-    #       - name: Windows 2022 Mingw-w64 Clang x86_64
-    #         os: windows-2022
-    #         compiler: clang++
-    #         comp: clang
-    #         run_64bit_tests: true
-    #         msys_sys: clang64
-    #         msys_env: clang-x86_64-clang
-    #         shell: msys2 {0}
-    #       - name: Windows 11 Mingw-w64 Clang arm64
-    #         os: windows-11-arm
-    #         compiler: clang++
-    #         comp: clang
-    #         run_armv8_tests: true
-    #         msys_sys: clangarm64
-    #         msys_env: clang-aarch64-clang
-    #         shell: msys2 {0}
-    # defaults:
-    #   run:
-    #     working-directory: src
-    #     shell: ${{ matrix.config.shell }}
-    # steps:
-    #   - uses: actions/checkout@v4
-    #     with:
-    #       fetch-depth: 0
-    #       persist-credentials: false
+          - name: macOS 15 Apple Clang
+            os: macos-15-intel
+            compiler: clang++
+            comp: clang
+            run_64bit_tests: true
+            shell: bash
+          - name: Windows 2022 Mingw-w64 GCC x86_64
+            os: windows-2022
+            compiler: g++
+            comp: mingw
+            run_64bit_tests: true
+            msys_sys: mingw64
+            msys_env: x86_64-gcc
+            shell: msys2 {0}
+          - name: Windows 2022 Mingw-w64 GCC i686
+            os: windows-2022
+            compiler: g++
+            comp: mingw
+            run_32bit_tests: true
+            msys_sys: mingw32
+            msys_env: i686-gcc
+            shell: msys2 {0}
+          - name: Windows 2022 Mingw-w64 Clang x86_64
+            os: windows-2022
+            compiler: clang++
+            comp: clang
+            run_64bit_tests: true
+            msys_sys: clang64
+            msys_env: clang-x86_64-clang
+            shell: msys2 {0}
+          - name: Windows 11 Mingw-w64 Clang arm64
+            os: windows-11-arm
+            compiler: clang++
+            comp: clang
+            run_armv8_tests: true
+            msys_sys: clangarm64
+            msys_env: clang-aarch64-clang
+            shell: msys2 {0}
+    defaults:
+      run:
+        working-directory: src
+        shell: ${{ matrix.config.shell }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: false
 
-    #   - name: Download required linux packages
-    #     if: runner.os == 'Linux'
-    #     run: |
-    #       sudo apt update
-    #       sudo apt install expect valgrind g++-multilib qemu-user-static
+      - name: Download required linux packages
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt update
+          sudo apt install expect valgrind g++-multilib qemu-user-static
 
-    #   - name: Install NDK
-    #     if: runner.os == 'Linux'
-    #     run: |
-    #       if [ $COMP == ndk ]; then
-    #         NDKV="27.2.12479018"
-    #         ANDROID_ROOT=/usr/local/lib/android
-    #         ANDROID_SDK_ROOT=$ANDROID_ROOT/sdk
-    #         SDKMANAGER=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager
-    #         echo "y" | $SDKMANAGER "ndk;$NDKV"
-    #         ANDROID_NDK_ROOT=$ANDROID_SDK_ROOT/ndk/$NDKV
-    #         ANDROID_NDK_BIN=$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin
-    #         echo "ANDROID_NDK_BIN=$ANDROID_NDK_BIN" >> $GITHUB_ENV
-    #       fi
+      - name: Install NDK
+        if: runner.os == 'Linux'
+        run: |
+          if [ $COMP == ndk ]; then
+            NDKV="27.2.12479018"
+            ANDROID_ROOT=/usr/local/lib/android
+            ANDROID_SDK_ROOT=$ANDROID_ROOT/sdk
+            SDKMANAGER=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager
+            echo "y" | $SDKMANAGER "ndk;$NDKV"
+            ANDROID_NDK_ROOT=$ANDROID_SDK_ROOT/ndk/$NDKV
+            ANDROID_NDK_BIN=$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin
+            echo "ANDROID_NDK_BIN=$ANDROID_NDK_BIN" >> $GITHUB_ENV
+          fi
 
-    #   - name: Set up QEMU
-    #     if: matrix.config.base_image
-    #     uses: docker/setup-qemu-action@v3
+      - name: Set up QEMU
+        if: matrix.config.base_image
+        uses: docker/setup-qemu-action@v3
 
-    #   - name: Set up Docker Buildx
-    #     if: matrix.config.base_image
-    #     uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        if: matrix.config.base_image
+        uses: docker/setup-buildx-action@v3
 
-    #   - name: Build Docker container
-    #     if: matrix.config.base_image
-    #     run: |
-    #       docker buildx build --platform ${{ matrix.config.platform }} --load -t don_builder - << EOF
-    #       FROM ${{ matrix.config.base_image }}
-    #       WORKDIR /app
-    #       RUN apk update && apk add make g++
-    #       CMD ["sh", "src/script.sh"]
-    #       EOF
+      - name: Build Docker container
+        if: matrix.config.base_image
+        run: |
+          docker buildx build --platform ${{ matrix.config.platform }} --load -t don_builder - << EOF
+          FROM ${{ matrix.config.base_image }}
+          WORKDIR /app
+          RUN apk update && apk add make g++
+          CMD ["sh", "src/script.sh"]
+          EOF
 
-    #   - name: Download required macOS packages
-    #     if: runner.os == 'macOS'
-    #     run: brew install coreutils gcc@11
+      - name: Download required macOS packages
+        if: runner.os == 'macOS'
+        run: brew install coreutils gcc@11
 
-    #   - name: Setup msys and install required packages
-    #     if: runner.os == 'Windows'
-    #     uses: msys2/setup-msys2@v2
-    #     with:
-    #       msystem: ${{ matrix.config.msys_sys }}
-    #       install: mingw-w64-${{ matrix.config.msys_env }} make git expect
+      - name: Setup msys and install required packages
+        if: runner.os == 'Windows'
+        uses: msys2/setup-msys2@v2
+        with:
+          msystem: ${{ matrix.config.msys_sys }}
+          install: mingw-w64-${{ matrix.config.msys_env }} make git expect
 
-    #   - name: Download the used network from the fishtest framework
-    #     run: make net
+      - name: Download the used network from the fishtest framework
+        run: make net
 
-    #   - name: Extract the bench number from the commit history
-    #     run: |
-    #       for hash in $(git rev-list -100 HEAD); do
-    #         benchref=$(git show -s $hash | tac | grep -m 1 -o -x '[[:space:]]*\b[Bb]ench[ :]\+[1-9][0-9]\{5,7\}\b[[:space:]]*' | sed 's/[^0-9]//g') && break || true
-    #       done
-    #       [[ -n "$benchref" ]] && echo "benchref=$benchref" >> $GITHUB_ENV && echo "From commit: $hash" && echo "Reference bench: $benchref" || echo "No bench found"
+      - name: Extract the bench number from the commit history
+        run: |
+          for hash in $(git rev-list -100 HEAD); do
+            benchref=$(git show -s $hash | tac | grep -m 1 -o -x '[[:space:]]*\b[Bb]ench[ :]\+[1-9][0-9]\{5,7\}\b[[:space:]]*' | sed 's/[^0-9]//g') && break || true
+          done
+          [[ -n "$benchref" ]] && echo "benchref=$benchref" >> $GITHUB_ENV && echo "From commit: $hash" && echo "Reference bench: $benchref" || echo "No bench found"
 
-    #   - name: Check compiler
-    #     run: |
-    #       if [ -z "${{ matrix.config.base_image }}" ]; then
-    #         if [ $COMP == ndk ]; then
-    #           export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
-    #         fi
-    #         $COMPCXX -v
-    #       else
-    #         echo "$COMPCXX -v" > script.sh
-    #         docker run --rm --platform ${{ matrix.config.platform }} -v ${{ github.workspace }}:/app don_builder
-    #       fi
+      - name: Check compiler
+        run: |
+          if [ -z "${{ matrix.config.base_image }}" ]; then
+            if [ $COMP == ndk ]; then
+              export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
+            fi
+            $COMPCXX -v
+          else
+            echo "$COMPCXX -v" > script.sh
+            docker run --rm --platform ${{ matrix.config.platform }} -v ${{ github.workspace }}:/app don_builder
+          fi
 
     #   - name: Test help target
     #     run: make help
