--- a/.github/workflows/arm_compilation.yml
+++ b/.github/workflows/arm_compilation.yml
@@ -51,10 +51,25 @@ jobs:
 
       - name: Extract the bench number from the commit history
         run: |
+          benchref=""
+
           for hash in $(git rev-list -100 HEAD); do
-            benchref=$(git show -s $hash | tac | grep -m 1 -o -x '[[:space:]]*\b[Bb]ench[ :]\+[1-9][0-9]\{5,7\}\b[[:space:]]*' | sed 's/[^0-9]//g') && break || true
+            msg="$(git log -1 --format=%B "$hash")"
+
+            benchref="$(printf '%s\n' "$msg" \
+              | grep -Eo '[Bb]ench[[:space:]:]+[1-9][0-9]{5,7}' \
+              | head -n1 \
+              | tr -cd '0-9')"
+
+            if [ -n "$benchref" ]; then
+              echo "From commit: $hash"
+              echo "Reference bench: $benchref"
+              echo "benchref=$benchref" >> $GITHUB_ENV
+              break
+            fi
           done
-          [[ -n "$benchref" ]] && echo "benchref=$benchref" >> $GITHUB_ENV && echo "From commit: $hash" && echo "Reference bench: $benchref" || echo "No bench found"
+
+          [ -z "$benchref" ] && echo "No bench found"
 
       - name: Download the used network from the fishtest framework
         run: make net
