--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -54,22 +54,23 @@ jobs:
 
           for hash in $(git rev-list -100 HEAD); do
             msg="$(git log -1 --format=%B "$hash")"
-
-            benchref="$(printf '%s\n' "$msg" \
-              | grep -Eo '[Bb]ench[[:space:]:]+[1-9][0-9]{5,7}' \
-              | head -n1 \
-              | tr -cd '0-9')" || true
-
-            if [ -n "$benchref" ]; then
-              echo "From commit: $hash"
-              echo "Reference bench: $benchref"
+            # Pattern 1: "Bench: 12345" or "bench: 12345"
+            if [[ "$msg" =~ [Bb]ench[[:space:]]*:[[:space:]]*([0-9]{6,8}) ]]; then
+              benchref="${BASH_REMATCH[1]}"
+              echo "Found: $benchref (commit: $hash)"
+              echo "benchref=$benchref" >> $GITHUB_ENV
+              break
+            # Pattern 2: "Bench 12345" (no colon)
+            elif [[ "$msg" =~ [Bb]ench[[:space:]]+([0-9]{6,8}) ]]; then
+              benchref="${BASH_REMATCH[1]}"
+              echo "Found: $benchref (commit: $hash)"
               echo "benchref=$benchref" >> $GITHUB_ENV
               break
             fi
           done
 
           if [ -z "$benchref" ]; then
-            echo "No bench found"
+            echo "No benchmark found"
           fi
 
       - name: Download the used network from the fishtest framework
