--- a/.github/workflows/arm_compilation.yml
+++ b/.github/workflows/arm_compilation.yml
@@ -54,15 +54,15 @@ jobs:
           benchref=""
 
           for hash in $(git rev-list -100 HEAD); do
-            msg="$(git log -1 --format=%B "$hash")"
-
-            # Match "Bench: 12345" or "Bench 12345"
+            # Use git show -s to get entire commit
+            msg="$(git show -s "$hash")"
+            # Search entire commit output for Bench
             if [[ "$msg" =~ [Bb]ench[[:space:]]*:?[[:space:]]*([0-9]+) ]]; then
-              benchref="${BASH_REMATCH[1]}"
-
-              # Validate: must be 6-8 digits
-              if [[ ${#benchref} -ge 6 && ${#benchref} -le 8 ]]; then
-                echo "Found benchmark: $benchref"
+              candidate="${BASH_REMATCH[1]}"
+              # Validate length (6-8 digits)
+              if [[ ${#candidate} -ge 6 && ${#candidate} -le 8 ]]; then
+                benchref="$candidate"
+                echo "Found benchmark: $benchref (commit: ${hash:0:8})"
                 echo "benchref=$benchref" >> $GITHUB_ENV
                 break
               fi
